# LLM-Data-Analyst-Groq

./: .gitignore  CONTRIBUTING.md  Project_Walkthrough.md  README.md  agent.py  app.py  pyproject.toml  tool_schemas.py  tools.py
sample_data/: generate_data.py  sales_data.csv
